; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlelem.c_HTMLElement_invoke.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlelem.c_HTMLElement_invoke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)* }

@.str = private unnamed_addr constant [36 x i8] c"(%p): element has no invoke method\0A\00", align 1
@E_NOTIMPL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32*, i32*, i32*, i32*)* @HTMLElement_invoke to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HTMLElement_invoke(i32* %0, i32 %1, i32 %2, i32 %3, i32* %4, i32* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = call %struct.TYPE_7__* @impl_from_DispatchEx(i32* %19)
  store %struct.TYPE_7__* %20, %struct.TYPE_7__** %18, align 8
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %18, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)*, i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)** %25, align 8
  %27 = icmp ne i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)* %26, null
  br i1 %27, label %28, label %45

28:                                               ; preds = %8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %18, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)*, i32 (%struct.TYPE_8__*, i32, i32, i32, i32*, i32*, i32*, i32*)** %33, align 8
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %18, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = load i32, i32* %11, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = load i32*, i32** %14, align 8
  %41 = load i32*, i32** %15, align 8
  %42 = load i32*, i32** %16, align 8
  %43 = load i32*, i32** %17, align 8
  %44 = call i32 %34(%struct.TYPE_8__* %36, i32 %37, i32 %38, i32 %39, i32* %40, i32* %41, i32* %42, i32* %43)
  store i32 %44, i32* %9, align 4
  br label %49

45:                                               ; preds = %8
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %18, align 8
  %47 = call i32 @ERR(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), %struct.TYPE_7__* %46)
  %48 = load i32, i32* @E_NOTIMPL, align 4
  store i32 %48, i32* %9, align 4
  br label %49

49:                                               ; preds = %45, %28
  %50 = load i32, i32* %9, align 4
  ret i32 %50
}

declare dso_local %struct.TYPE_7__* @impl_from_DispatchEx(i32*) #1

declare dso_local i32 @ERR(i8*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
